# ffwd

./: Makefile  README.md  configure.sh
include/: Makefile  ffwd.h  num_sock.sh
libffwd/: ffwd_sample.c  libffwd.c  macro.h  platform.sh
liblock/: Makefile  Makefile.config  ccsynch.c  dsmsynch.c  eercl.c  fccsynch.asm  fccsynch.c  flatcombining.c  fqueue.h  liblock-fatal.h  liblock.c  main.c  mcs.c  mcs_mon.c  mcstp.c  mwait.c  posix.c  spinlock.c  splash2.out
memcached/libmemcached-1.0.2/: .quickly  COPYING  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.in  configure  configure.ac
memcached/libmemcached-1.0.2/clients/: client_options.h  execute.cc  execute.h  generator.cc  include.am  memaslap.c  memcapable.cc  memcat.cc  memcp.cc  memdump.cc  memerror.cc  memexist.cc  memflush.cc  memparse.cc  memping.cc  memrm.cc  memslap-profiling  memslap.cc  memstat.cc  memtouch.cc  ms_conn.c  ms_setting.c  ms_setting.h  ms_sigsegv.c  ms_task.c  ms_thread.c  utilities.cc  utilities.h
memcached/libmemcached-1.0.2/config/: autorun.sh
memcached/libmemcached-1.0.2/docs/: conf.py.in  include.am
memcached/libmemcached-1.0.2/docs/man/: hashkit_clone.3  hashkit_crc32.3  hashkit_create.3  hashkit_fnv1_32.3  hashkit_fnv1_64.3  hashkit_fnv1a_32.3  hashkit_fnv1a_64.3  hashkit_free.3  hashkit_functions.3  hashkit_hsieh.3  hashkit_is_allocated.3  hashkit_jenkins.3  hashkit_md5.3  hashkit_murmur.3  hashkit_value.3  libhashkit.3  libmemcached.3  libmemcached_check_configuration.3  libmemcached_configuration.3  libmemcached_examples.3  libmemcachedutil.3  memaslap.1  memcached.3  memcached_add.3  memcached_add_by_key.3  memcached_analyze.3  memcached_append.3  memcached_append_by_key.3  memcached_behavior_get.3  memcached_behavior_set.3  memcached_callback_get.3  memcached_callback_set.3  memcached_cas.3  memcached_cas_by_key.3  memcached_clone.3  memcached_create.3  memcached_decrement.3  memcached_decrement_with_initial.3  memcached_delete.3  memcached_delete_by_key.3  (+73 more)
memcached/libmemcached-1.0.2/example/: byteorder.cc  include.am  interface_v0.c  interface_v1.c  memcached_light.c  storage.c
memcached/libmemcached-1.0.2/libhashkit/: algorithm.cc  behavior.cc  common.h  crc32.cc  digest.cc  fnv_32.cc  fnv_64.cc  function.cc  has.cc  hashkit.cc  hsieh.cc  include.am  jenkins.cc  ketama.cc  md5.cc  murmur.cc  one_at_a_time.cc  str_algorithm.cc  strerror.cc
memcached/libmemcached-1.0.2/libhashkit-1.0/: algorithm.h  behavior.h  configure.h.in  digest.h  function.h  has.h  hashkit.h  hashkit.hpp  include.am  strerror.h  types.h
memcached/libmemcached-1.0.2/libmemcached/: allocators.cc  analyze.cc  array.c  array.h  assert.hpp  auto.cc  backtrace.cc  backtrace.hpp  behavior.cc  byteorder.cc  byteorder.h  callback.cc  common.h  connect.cc  delete.cc  do.cc  do.hpp  dump.cc  error.cc  error.hpp  exist.cc  fetch.cc  flush.cc  flush_buffers.cc  get.cc  hash.cc  hosts.cc  include.am  initialize_query.cc  initialize_query.h  io.cc  io.h  io.hpp  is.h  key.cc  key.hpp  memcached.cc  memory.h  namespace.cc  namespace.h  (+21 more)
memcached/libmemcached-1.0.2/libmemcached-1.0/: allocators.h  analyze.h  behavior.h  callback.h  configure.h.in  constants.h  error.h  exist.h  hash.h  include.am  memcached.h  memcached.hpp  platform.h  quit.h  result.h  return.h  sasl.h  server.h  server_list.h  stats.h  strerror.h  string.h  types.h
memcached/libmemcached-1.0.2/libmemcached/csl/: common.h  context.cc  context.h  include.am  parser.cc  parser.h  scanner.cc  scanner.h  server.h
memcached/libmemcached-1.0.2/libmemcached/memcached/: protocol_binary.h
memcached/libmemcached-1.0.2/libmemcachedinternal/: include.am
memcached/libmemcached-1.0.2/libmemcachedinternal/util/: include.am
memcached/libmemcached-1.0.2/libmemcachedprotocol/: ascii_handler.c  binary_handler.c  cache.c  common.h  handler.c  include.am
memcached/libmemcached-1.0.2/libmemcachedprotocol-0.0/: binary.h  callback.h  handler.h
memcached/libmemcached-1.0.2/libmemcachedutil/: common.h  include.am  pid.cc  ping.cc  pool.cc  version.cc
memcached/libmemcached-1.0.2/libmemcachedutil-1.0/: ostream.hpp  pid.h  pool.h
memcached/libmemcached-1.0.2/libtest/: binaries.cc  binaries.h  blobslap_worker.cc  blobslap_worker.h  callbacks.h  cmdline.cc  cmdline.h  collection.h  common.h  comparison.hpp  core.cc  core.h  error.h  failed.h  framework.cc  framework.h  gearmand.cc  gearmand.h  get.h  include.am  is_local.cc  is_local.hpp  is_pid.hpp  killpid.cc  killpid.h  libtool.cc  libtool.hpp  memcached.cc  memcached.h  port.cc  port.h  run.gdb  runner.cc  runner.h  server.cc  server.h  server_container.cc  server_container.h  signal.cc  signal.h  (+16 more)
memcached/libmemcached-1.0.2/m4/: ax_check_library.m4  bottom.m4  eagain.m4  enable_utillib.m4  gearmand.m4  libgearman.m4  memcached.m4  memcached_sasl.m4  pandora_canonical.m4  pandora_have_libaio.m4  pandora_have_libhaildb.m4  pandora_have_libuuid.m4  pandora_optimize.m4  pandora_platform.m4  pandora_vc_build.m4  pandora_warnings.m4  socket_send_flags.m4
memcached/libmemcached-1.0.2/support/: libmemcached-fc.spec.in  libmemcached.spec.in
memcached/libmemcached-1.0.2/tests/: atomsmasher.cc  basic.cc  c_sasl_test.c  c_test.c  callbacks.cc  cpp_example.cc  cycle.cc  debug.cc  deprecated.cc  error_conditions.cc  exist.cc  failure.cc  hash_plus.cc  hash_results.h  hashkit_functions.cc  include.am  internals.cc  ketama.cc  libmemcached_world.h  mem_functions.cc  mem_udp.cc  memcapable.cc  memcat.cc  memcp.cc  memdump.cc  memerror.cc  memexist.cc  memflush.cc  memrm.cc  memslap.cc  memstat.cc  memtouch.cc  namespace.cc  parser.cc  parser.h  plus.cpp  pool.cc  pool.h  print.cc  print.h  (+8 more)
memcached/libmemcached-1.0.2/util/: include.am  instance.cc  instance.hpp  operation.cc  signal.hpp  string.hpp
memcached/libmemcached-1.0.2/win32/: include.am
scripts/: benchmarks.sh  hash_size_exp.sh  lazylist_size_exp.sh  lazylist_threads_exp.sh  liblock_memcached.sh  liblock_splash2.sh  make_plot.sh  memcached.sh  plot.sh  radiosity.sh  raytrace.sh  shared_vars_exp.sh  simplelist_threads_exp.sh
(+666 files in other folders)
